K#3571 standardisation de la reponse
